--- a/index.html
+++ b/index.html
@@ -77,13 +77,11 @@
     <div class="container">
       <h2 class="section-title">About me</h2>
       <p>
-        Hi, my name is Cholpon Abdisukhanova, i am a Frontend developer, Java Backend developer & Data scientist. I am
-        trying to hone my skills in Web development and i have core understanding in Java and Pyhton languages. Here
-        major skill i have.
+        Hi, my name is Cholpon Abdisukhanova, and I am a DevOps engineer. I also have a basic understanding of web development and a core understanding of the Java and Python languages.
       </p>
       <p>
-        I'm studying at courses "JAVA" in
-        PEAKSOFT HOUSE.
+        I'm studied at courses "JAVA" in
+        PEAKSOFT HOUSE. <br/>
       </p>
       <p>Ready to implement excellent projects with wonderful people.</p>
     </div>
